--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && pushd build && npx surge && popd build"
+    "deploy": "react-scripts build && pushd build && npx surge . 'andrew.energy' && popd build"
   }
 }
