--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "9.3.4",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^13.11.0",
