--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run export && npx surge --domain `cat CNAME` dist"
   },
   "dependencies": {
+    "dedent": "^0.7.0",
     "next": "9.3.4",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
@@ -17,6 +18,7 @@
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dedent": "^0.7.0",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "typescript": "^3.8.3"
