--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 dist/
@@ -30,3 +32,5 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+.vercel
