--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dedent": "^0.7.0",
     "next": "9.5",
+    "next-compose-plugins": "^2.2.0",
+    "next-optimized-images": "^3.0.0-canary.10",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
