--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^3.0.0-canary.10",
     "next-page-transitions": "^1.0.0-beta.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/dedent": "^0.7.0",
     "@types/node": "^13.13.21",
-    "@types/react": "^16.9.49",
+    "@types/react": "^17.0.1",
     "typescript": "^3.9.7"
   }
 }
