--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/dedent": "^0.7.0",
