--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
+    "@react-hook/resize-observer": "^1.2.6",
     "@tailwindcss/line-clamp": "^0.4.2",
     "dedent": "^0.7.0",
     "next": "^12.3.1",
