--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth0/nextjs-auth0": "^1.7.0",
     "@react-hook/resize-observer": "^1.2.6",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "cursor-effects": "^1.0.6",
     "dedent": "^0.7.0",
     "next": "^12.3.1",
     "next-compose-plugins": "^2.2.1",
