--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
-    "export": "npm run build && next export -o dist",
     "start": "next start",
-    "deploy": "npm run export && npx surge --domain `cat CNAME` dist"
+    "deploy": "vercel build --prod && vercel deploy --prebuilt --prod"
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.6",
@@ -32,6 +31,7 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vercel": "^28.4.5"
   }
 }
