--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-typed": "^1.2.0",
+    "sharp": "^0.31.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
