--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.6",
-    "cursor-effects": "^1.0.11",
-    "next": "^13.2.1",
+    "crypto-js": "^4.2.0",
+    "cursor-effects": "^1.0.15",
+    "next": "^14.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-page-transitions": "^1.0.0-beta.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-typed": "^1.2.0",
-    "sharp": "^0.31.3",
-    "swr": "^2.0.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-typed": "^2.0.12",
+    "sharp": "^0.33.3",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5",
-    "vercel": "^28.16.7"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vercel": "^34.1.9"
   }
 }
