--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
+    "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0",
     "vercel": "^34.1.9"
   }
 }
